# subtitle-remove

./: .gitignore  BUILD_WINDOWS.md  README-TAURI.md  README.md  SETUP.md  app.py  package-windows.sh  package.json  requirements.txt  test_backend.sh  原理博客.md
.github/workflows/: build-windows.yml
backend/: __init__.py  config.py  remove_watermark_cli.py
front/: index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.css  App.tsx  index.css
python/: README.md  __init__.py  app.py  config.py  convert_image_cli.py  lama_inpaint.py  remove_watermark_cli.py
python/models/big-lama/: .gitkeep
src/: index.css
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
static/: index.html
tauri/: Cargo.toml  start-frontend.sh  tauri.conf.json
tauri/icons/: .gitkeep  icon.icns
tauri/src/: main.rs
